<resources>
    <string name="app_name">Odborkovník</string>
    <string name="login">Login</string>
    <string name="emailAdress">Enter email adress</string>
    <string name="password">Enter your password</string>
    <string name="register">Register</string>
    <string name="fullname">Enter your fullname</string>
    <string name="scoutNickname">Enter your scout nickname</string>
    <string name="confPassword">Confirm your password</string>
    <string name="unit">Enter your scout unit</string>
    <string name="noAccount">Don\'t have an account yet? Register here</string>
    <string name="registered">Already registered ? Sign in here</string>
    <string name="title_activity_main2">Main2Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_test">test</string>
    <string name="title_activity_asd">asd</string>
    <string name="Logout">Logout</string>
    <string name="Finished">Finished</string>
    <string name="Actual">Actual</string>
    <string name="Home">Home</string>
</resources>
